kustomize-units/kyverno-policies/generic/components/disallow-default-namespace/disallow-default-namespace.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-namespace
  annotations:
    kustomize.toolkit.fluxcd.io/force: Enabled
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Disallow Default Namespace
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/category: Multi-Tenancy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The best practice is that workloads should be isolated with Namespaces. A crude way of complying with this
      requirement and keep security compliance test suites happy is to not allow pod creation in 'default' namespace.
      This policy validates that Pods specify a Namespace name other than `default`.
      should not be used. This policy validates that Pods specify a Namespace name other than `default`.
    sylva.org/kyverno-exclude-kube-system: add-matchCondition
spec:
  validationFailureAction: Enforce
  background: false # validation is moved from Kyverno policy engine to kube-api server
  webhookConfiguration:
    matchConditions:
    - name: request-is-create
      expression: request.operation == "CREATE"
    - name: ns-is-default
      expression: >-
        has(object.metadata) &&
        object.metadata.namespace == "default"
  rules:
  - name: validate-namespace
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: Using 'default' namespace is not allowed for Pods.
      deny: {}
  - name: validate-podcontroller-namespace
    match:
      any:
      - resources:
          kinds:
          - DaemonSet
          - Deployment
          - Job
          - StatefulSet
    validate:
      message: Using 'default' namespace is not allowed for Pod controllers.
      deny: {}
